# nix-ci-eval

./: .clang-format  .gitignore  README.md  flake.nix  meson.build  package.nix
src/: args.cc  args.hh  coordinator.cc  coordinator.hh  line_io.cc  line_io.hh  main.cc  nix_eval.cc  nix_eval.hh  pure.cc  pure.hh  worker.cc  worker.hh
test/: pure_test.cc  shallow_test.cc
test/integration/: expected.txt  flake.nix  run.sh
test/shallow/: run.sh
